creating top nav section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,6 +8,32 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div></div>
+  <div id="wrapper">
+    <section class="top-container">
+      <section class="top-container nav">
+        <img src="images/logo.png" alt="">
+        <img src="images/search.png" alt="">
+        <input type="text" name="search">
+        <div class="login">
+          <a href="">. . .</a>
+          <a href="">Login</a>
+        </div>
+      </section>
+      <nav class="menu">
+        <ul class="menu-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Tech</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Podcasts</a></li>
+          <li><a href="#">Books</a></li>
+          <li><a href="#">Bots</a></li>
+          <li><a href="#">Developer Tools</a></li>
+          <li><a href="#">IMessage apps</a></li>
+          <li><img src="images/arrow-prev.png" alt=""></li>
+          <li><img src="images/arrow-next.png" alt=""></li>
+        </ul>
+      </nav>
+    </section>
+  </div>
 </body>
 </html>
